--- a/recommendation.handlebars
+++ b/recommendation.handlebars
@@ -40,12 +40,28 @@
      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
   </nav>
+  <br>
 
   <!-- End NavBar -->
+  
+  <br>
+  <div class="row">
+    <div class="text-center col-sm-6">
+      <div class="col-xs-1 center-block">
+        <h2>Weather</h2>
+      </div>
+      <img src="https://upload-icon.s3.us-east-2.amazonaws.com/uploads/icons/png/7326596361553239397-512.png" class="img-fluid border rounded-circle border-success h-75" alt="Responsive image">
+    </div>
+    <div class="text-center col-sm-6">
+      <div class="col-xs-1 center-block">
+        <h2>Trail Difficulty</h2>
+      </div>  
+      <img src="https://img.icons8.com/ios/452/mountain.png" class="img-fluid border rounded-circle border-success h-75" alt="Responsive image">
+      <div>
 
-  <!-- Start Your Pages Content Here -->
-
-  <!-- End Your Pages Content Here -->
+      </div>
+    </div>
+  </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
