--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,8 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Trail Finder</title>
-    <script src="https://code.jquery.com/jquery-3.5.1.js" type="text/javascript"></script>
+    <title>{{title}}</title>
+	<script src="https://code.jquery.com/jquery-3.5.1.js" type="text/javascript"></script>
   </head>
   <body>
 
@@ -43,60 +43,11 @@
   </nav>
 
   <!-- End NavBar -->
+	
+	<div id="page-content">
+			{{{body}}}
+	</div>
 
-  <!-- Start Your Pages Content Here -->
-
- 
-  <div class="container">
-
-  <script type = "text/javascript" language = "javascript">
-  var x = "<tr><td>"+ "#" +"</td><td>" + "Name" + "</td><td>"+"Length" +"</td><td>"+ "Location" + "</td></tr>";
-    $(document).ready(function() {
-      var lat = 40.0274;
-      var lon = -105.2519;
- 
-       $("#driver").click(function(event){
-          $.getJSON('https://www.hikingproject.com/data/get-trails?lat='+lat+'&lon='+lon+'&maxDistance=10&key=200968539-dd5a047534138b0cfaab99ad482a2492', function(jd) {
-             
-            var sum = 0;
-             console.log(JSON.stringify(jd));
-             for (i in jd.trails) {
-               sum++;
-                x += "<tr><td>"+ sum +"</td><td>" + jd.trails[i].name + "</td><td>"+jd.trails[i].length +"</td><td>"+jd.trails[i].location + "</td></tr>";
-              }
-              document.getElementById("table").innerHTML = x;
-
-          });
-       });
-   
-    });
- </script>
-
-<label for="location">Please enter a location: </label>
-<input type="text" id="location" name="location" required
-       minlength="4" maxlength="20" size="20">
-
-       <input type = "button" id = "driver" value = "Get Trails" class="btn btn-primary">
-
-
- <div id = "stage" class = "container">
-    RESULTS
- </div>
- <table id="table"> 
-   <!-- # name length location -->
-   
-</table> 
-
- </div>
-
- 
-    
-    
-
-  
-
-  <!-- End Your Pages Content Here -->
-  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
   </body>
