added menu navigation

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,21 +1,12 @@
 
-<h1>Some information about shapes</h1>
-<img class = "float-right" src="/common/p1/all-shapes2.jpg" alt="shapes">
-<h2>What’s so interesting about shapes?</h2>
+<h1>Please Enter your information:</h1>
 
-
-
-<p>
-	<ul>
-		<li>Formulas to describe shapes</li>
-		<li>Shapes in geometry</li>
-		<li>Shapes in trigonometry</li>
-		<li>Shapes in physics</li>
-		<li>Shapes in nature</li>
-	</ul>
-</p>
-
-<p>According to <a href="https://www.toppr.com/guides/maths/basic-geometrical-ideas/basic-geometrical-shapes/">Toppr.com</a>, <br>
-<blockquote>Geometric Shapes can be defined as figure or area closed by a boundary which is created by combining the specific amount of curves, points, and lines.</blockquote>
-
-
+ <form id="my_form" onsubmit="return false;">
+  <label for="fname">First name:</label>
+  <input type="text" id="fname" name="fname"><br><br>
+  <label for="lname">Last name:</label>
+  <input type="text" id="lname" name="lname"><br><br>
+  <label for="">Fitness Level:</label>
+  <input type="text" id="flevel" name="flevel"><br><br>
+  <input type="submit" value="Submit">
+</form> 
