--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,16 +23,16 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Trails Near Me</a>
+        <a class="nav-link" href="/trailsnearme">Trails Near Me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Trails For Me</a>
+        <a class="nav-link" href="/personalized">Trails For Me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Estimate Fitness Level</a>
+        <a class="nav-link" href="/fitness">Estimate Fitness Level</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Gear Recommendation</a>
+        <a class="nav-link" href="/recommendation">Gear Recommendation</a>
       </li>
     </ul>
   </div>
