fixed route name

--- a/views/trailsnearme.handlebars
+++ b/views/trailsnearme.handlebars
@@ -45,7 +45,7 @@ function getGear(scriptLat, scriptLng, scriptDiff){
   
   
   //console.log(sessionStorage.getItem('trailDiff'));
-  location.href = "/recommendations";
+  location.href = "/recommendation";
 }
 
 </script>
