--- a/views/trailsnearme.handlebars
+++ b/views/trailsnearme.handlebars
@@ -23,13 +23,15 @@
    
 </table> 
 <script type = "text/javascript" language = "javascript">
-function getDirections(scriptLat, scriptLng){
+function getDirections(userLat, userLng, trailLat, trailLng){
   
   sessionStorage.setItem('trailLat', scriptLat);
   sessionStorage.setItem('trailLng', scriptLng);
   //console.log(sessionStorage.getItem('trailLat'));
   //console.log(sessionStorage.getItem('trailLng'));
-  location.href = "/directions";
+  //location.href = "/directions";
+  window.open("https://www.google.com/maps/dir/"+userLat+", "+userLng+"/"+trailLat+", "+trailLng+"/", "_blank");
+}
 }
 
 </script>
@@ -82,6 +84,8 @@ function getGear(scriptLat, scriptLng, scriptDiff){
 
             latNew = JSON.stringify(kd.results[0].geometry.location.lat);
             lngNew = JSON.stringify(kd.results[0].geometry.location.lng);
+           
+            var userLoc = kd.results[0].geometry.location.lat + ", " + kd.results[0].geometry.location.lng;
 
             //lat = parseFloat(latNew);
             //lng = parseFloat(lngNew);
@@ -113,6 +117,8 @@ function getGear(scriptLat, scriptLng, scriptDiff){
                var tempLat;
                var tempLng;
 
+              
+
                tempLat = jd.trails[i].latitude;
                tempLng = jd.trails[i].longitude;
                tempDiff = jd.trails[i].difficulty
@@ -124,7 +130,7 @@ function getGear(scriptLat, scriptLng, scriptDiff){
               console.log(myLocDiffString);
 
                sum++;
-                x += "<tr><td>"+ sum +"</td><td>" + jd.trails[i].name + "</td><td>"+jd.trails[i].length +"</td><td>"+jd.trails[i].difficulty +"</td><td>"+jd.trails[i].location +"</td><td>" +  "<button onclick='getDirections("+myLocString+")'>Get Directions</button>"+"</td><td>"+"</td><td>" +  "<button onclick='getGear("+myLocDiffString+")'>Get Gear Recommendations</button>"+"</td></tr>";
+                x += "<tr><td>"+ sum +"</td><td>" + jd.trails[i].name + "</td><td>"+jd.trails[i].length +"</td><td>"+jd.trails[i].difficulty +"</td><td>"+jd.trails[i].location +"</td><td>" +  "<button onclick='getDirections("+userLoc+", "+myLocString+")'>Get Directions</button>"+"</td><td>"+"</td><td>" +  "<button onclick='getGear("+myLocDiffString+")'>Get Gear Recommendations</button>"+"</td></tr>";
               }
               document.getElementById("table").innerHTML = x;
 
