--- a/views/personalized.handlebars
+++ b/views/personalized.handlebars
@@ -5,6 +5,7 @@
 <label for="diffSelect">Please select a difficulty: </label>
 
 <select name="diffSelect" id="diffSelect">
+  <option value="all">all</option>
   <option value="easy">easy</option>
   <option value="easy/intermediate">easy/intermediate</option>
   <option value="intermediate">intermediate</option>
@@ -16,9 +17,13 @@
 <label for="location">Please enter a location: </label>
 <input type="text" id="location" name="location" required
        minlength="4" maxlength="20" size="20" value = ""><br>
-
+        <!--
        <input type = "button" id = "driver" value = "Get Trails nearby" class="btn btn-primary">
-       <input type = "button" id = "driver2" value = "Get Trails for my fitnmess level" class="btn btn-primary">
+       
+       <input type="checkbox" id="filter" name="filter" value="filterMe">
+        <label for="filter"> Limit results based off fitness level</label>
+        -->
+       <input type = "button" id = "driver2" value = "Display Results" class="btn btn-primary">
        <!--https://api.opencagedata.com/geocode/v1/json?q=PLACENAME&key=YOUR-API-KEY
        console.log(JSON.stringify(jd)); -->
        <!-- <p>{{oc_api}}</p> --> 
@@ -146,7 +151,7 @@ function getGear(scriptLat, scriptLng, scriptDiff){
             
                //console.log(jd.trails[i].difficulty);
                //console.log(tDiff);
-               if(tDiff == myDiff){
+               if(tDiff == myDiff || myDiff == 'all'){
                  console.log('match');
                
                var tempLat;
@@ -158,7 +163,7 @@ function getGear(scriptLat, scriptLng, scriptDiff){
 
                var myLocString = tempLat+", "+tempLng;
 
-               var myLocDiffString = myLocString+", "+ "\""+tempDiff+"\"";
+               var myLocDiffString = myLocString+", "+ "\""+tDiff+"\"";
 
               //console.log(myLocDiffString);
 
@@ -227,7 +232,7 @@ function getGear(scriptLat, scriptLng, scriptDiff){
 
                var myLocString = tempLat+", "+tempLng;
 
-               var myLocDiffString = myLocString+", "+ "\""+tempDiff+"\"";
+               var myLocDiffString = myLocString+", "+ "\""+tDiff+"\"";
 
               console.log(myLocDiffString);
 
