--- a/views/personalized.handlebars
+++ b/views/personalized.handlebars
@@ -24,10 +24,7 @@
         <label for="filter"> Limit results based off fitness level</label>
         -->
        <input type = "button" id = "driver2" value = "Display Results" class="btn btn-primary">
-       <!--https://api.opencagedata.com/geocode/v1/json?q=PLACENAME&key=YOUR-API-KEY
-       console.log(JSON.stringify(jd)); -->
-       <!-- <p>{{oc_api}}</p> --> 
-       <!-- <p>{{trail_api}}</p> --> 
+
 
 
  <div id = "stage" class = "container">
@@ -42,8 +39,7 @@ function getDirections(scriptLat, scriptLng){
   
   sessionStorage.setItem('trailLat', scriptLat);
   sessionStorage.setItem('trailLng', scriptLng);
-  //console.log(sessionStorage.getItem('trailLat'));
-  //console.log(sessionStorage.getItem('trailLng'));
+
   location.href = "/directions";
 }
 
@@ -81,36 +77,23 @@ function getGear(scriptLat, scriptLng, scriptDiff){
        $("#driver2").click(function(event){
          var myLoc = document.getElementById("location").value;
          var myDiff = document.getElementById("diffSelect").value;
-         //console.log(myLoc);
-         //console.log(myDiff);
-         //turn myLoc into correct form 
+
          myNewLoc = (myLoc.replace(/ /g, '%2C%'));
          myNextNewLoc = (myNewLoc.replace(/[',']+/g, ''));
          //console.log(myNextNewLoc);
 
         $.get( "https://api.opencagedata.com/geocode/v1/google-v3-json?q="+myNextNewLoc+"&key={{oc_api}}&pretty=1&no_annotations=1", function(kd) {
-            //console.log(JSON.stringify(kd));
-            //console.log(JSON.stringify(kd.results));
-            //console.log(JSON.stringify(kd.results..geometry.location.lat));
-            //results[0].geometry.location
-            //console.log(JSON.stringify(kd.results..geometry.location.lng));
-            //console.log(JSON.stringify(kd.results[0].geometry.location.lat));
-            //console.log(JSON.stringify(kd.results[0].geometry.location.lng));
+
 
             latNew = JSON.stringify(kd.results[0].geometry.location.lat);
             lngNew = JSON.stringify(kd.results[0].geometry.location.lng);
 
-            //lat = parseFloat(latNew);
-            //lng = parseFloat(lngNew);
+
 
             
             lat = (latNew.replace(/['"]+/g, ''));
             lng = (lngNew.replace(/['"]+/g, ''));
 
-            //console.log(lat);
-            //console.log(lng);
-
-            //console.log('lat='+lat+'&lon='+lng);
 
 
          var x = "<tr><td>"+ "#" +"</td><td>" + "Name" + "</td><td>"+"Length" +"</td><td>"+ "Difficulty" +"</td><td>"+ "Location" + "</td></tr>";
@@ -127,7 +110,7 @@ function getGear(scriptLat, scriptLng, scriptDiff){
             var sum = 0;
              //console.log(JSON.stringify(jd));
              for (i in jd.trails) {
-               console.log(myDiff);
+               //console.log(myDiff);
 
                var tDiff;
                if(jd.trails[i].difficulty == 'green'){
@@ -152,7 +135,7 @@ function getGear(scriptLat, scriptLng, scriptDiff){
                //console.log(jd.trails[i].difficulty);
                //console.log(tDiff);
                if(tDiff == myDiff || myDiff == 'all'){
-                 console.log('match');
+                 //console.log('match');
                
                var tempLat;
                var tempLng;
@@ -176,74 +159,7 @@ function getGear(scriptLat, scriptLng, scriptDiff){
           });
        });
     });
-       $("#driver").click(function(event){
-         var myLoc = document.getElementById("location").value;
-         console.log(myLoc);
-         //turn myLoc into correct form 
-         myNewLoc = (myLoc.replace(/ /g, '%2C%'));
-         myNextNewLoc = (myNewLoc.replace(/[',']+/g, ''));
-         console.log(myNextNewLoc);
 
-        $.get( "https://api.opencagedata.com/geocode/v1/google-v3-json?q="+myNextNewLoc+"&key={{oc_api}}&pretty=1&no_annotations=1", function(kd) {
-            //console.log(JSON.stringify(kd));
-            //console.log(JSON.stringify(kd.results));
-            //console.log(JSON.stringify(kd.results..geometry.location.lat));
-            //results[0].geometry.location
-            //console.log(JSON.stringify(kd.results..geometry.location.lng));
-            //console.log(JSON.stringify(kd.results[0].geometry.location.lat));
-            //console.log(JSON.stringify(kd.results[0].geometry.location.lng));
-
-            latNew = JSON.stringify(kd.results[0].geometry.location.lat);
-            lngNew = JSON.stringify(kd.results[0].geometry.location.lng);
-
-            //lat = parseFloat(latNew);
-            //lng = parseFloat(lngNew);
-
-            
-            lat = (latNew.replace(/['"]+/g, ''));
-            lng = (lngNew.replace(/['"]+/g, ''));
-
-            console.log(lat);
-            console.log(lng);
-
-            console.log('lat='+lat+'&lon='+lng);
-
-
-         var x = "<tr><td>"+ "#" +"</td><td>" + "Name" + "</td><td>"+"Length" +"</td><td>"+ "Difficulty" +"</td><td>"+ "Location" + "</td></tr>";
-         document.getElementById("table").innerHTML = "";
-         
-          
-
-            //console.log(latNew);
-            //console.log(lngNew);
-       
-
-          $.getJSON('https://www.hikingproject.com/data/get-trails?lat='+lat+'&lon='+lng+'&maxDistance=10&key={{trail_api}}', function(jd) {
-             
-            var sum = 0;
-             //console.log(JSON.stringify(jd));
-             for (i in jd.trails) {
-               var tempLat;
-               var tempLng;
-
-               tempLat = jd.trails[i].latitude;
-               tempLng = jd.trails[i].longitude;
-               tempDiff = jd.trails[i].difficulty
-
-               var myLocString = tempLat+", "+tempLng;
-
-               var myLocDiffString = myLocString+", "+ "\""+tDiff+"\"";
-
-              console.log(myLocDiffString);
-
-               sum++;
-                x += "<tr><td>"+ sum +"</td><td>" + jd.trails[i].name + "</td><td>"+jd.trails[i].length +"</td><td>"+jd.trails[i].difficulty +"</td><td>"+jd.trails[i].location +"</td><td>" +  "<button onclick='getDirections("+myLocString+")'>Get Directions</button>"+"</td><td>"+"</td><td>" +  "<button onclick='getGear("+myLocDiffString+")'>Get Gear Recommendations</button>"+"</td></tr>";
-              }
-              document.getElementById("table").innerHTML = x;
-
-          });
-       });
-    });
 
     });
  </script>
