--- a/views/recommendation.handlebars
+++ b/views/recommendation.handlebars
@@ -142,7 +142,7 @@
     var name = null;
     var condition = null;
     var trailLat = sessionStorage.getItem("trailLat")
-    var trailLong = sessionStorage.getItem("trailLong")
+    var trailLong = sessionStorage.getItem("trailLng")
     var trailDiff = sessionStorage.getItem("trailDiff")
 
     // Main script to gather weather information
