--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,15 +16,17 @@
   <!-- NavBar -->
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Trail Finder</a>
+  <a class="navbar-brand" href="/">Trail Finder</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/trailsnearme">Trails Near Me</a>
+        <a class="nav-link" href="/personalized">Trails Near Me</a>
       </li>
+      <!--
       <li class="nav-item">
         <a class="nav-link" href="/personalized">Trails For Me</a>
       </li>
@@ -35,12 +37,16 @@
         <a class="nav-link" href="/recommendation">Gear Recommendation</a>
       </li>
     </ul>
+    -->
   </div>
+  <!--
       <form class="form-inline">
      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
+    -->
   </nav>
+  
 
   <!-- End NavBar -->
 	
