changed html pages to handlebars files

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,12 +1,67 @@
 
-<h1>Please Enter your information:</h1>
 
- <form id="my_form" onsubmit="return false;">
-  <label for="fname">First name:</label>
-  <input type="text" id="fname" name="fname"><br><br>
-  <label for="lname">Last name:</label>
-  <input type="text" id="lname" name="lname"><br><br>
-  <label for="">Fitness Level:</label>
-  <input type="text" id="flevel" name="flevel"><br><br>
-  <input type="submit" value="Submit">
-</form> 
+  <!-- Start Your Pages Content Here -->
+
+    <!-- Masthead -->
+  <header class="masthead text-white text-center">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-9 mx-auto">
+          <h1 class="mb-5">
+          </h1>
+        </div>
+        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+          <form>
+            <div class="form-row">
+              <div class="col-12 col-md-9 mb-2 mb-md-0">
+                <input type="text" class="form-control form-control-lg" placeholder="Enter your city, state...">
+              </div>
+              <div class="col-12 col-md-3">
+                <button type="submit" class="mb-4 btn btn-block btn-lg btn-primary">Find Trails!</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <!-- Icons Grid -->
+  <section class="features-icons bg-light text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-screen-desktop m-auto text-primary"></i>
+            </div>
+            <h3 class="mt-5">Find Trails</h3>
+            <p class="lead mb-0">You will be directed to a list of trails near you!</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-layers m-auto text-primary"></i>
+            </div>
+            <h3 class="mt-5">Find the Perfect Fit</h3>
+            <p class="lead mb-0">Get customized recommendations
+            for your current mood and fitness level!</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-check m-auto text-primary"></i>
+            </div>
+            <h3 class="mt-5">Get Prepared</h3>
+            <p class="lead mb-0">Get custom gear recommendations based
+            on the conditions and weather!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- End Your Pages Content Here -->
